--- a/client/index.jade
+++ b/client/index.jade
@@ -1,14 +1,40 @@
 doctype html
 html
   head
-    meta(charset='utf-8')      
-    title Apollo
+    meta(charset='utf-8')
+    title Tic-Tac-Toe
     link(rel='stylesheet', href='/vendor/font-awesome/css/font-awesome.min.css')
     link(rel='stylesheet', href=isProd ? '/index.min.css' : '/index.css')
     link(rel='shortcut icon', href='/favicon.ico')
   body
-    img#apollo(src='/assets/apollo.jpg')
-    h1#title Apollo
+    h1 Tic-Tac-Toe
 
-    script(src='/vendor/lodash/lodash.min.js')
+    #controls
+      button#reset Reset
+      #chooser
+        input#p1-choose(type='color', value = '#ff3322') 
+        label P1
+        input#p2-choose(type='color', value = '#113322')
+        label P2
+        button#start Start Game!
+      #players
+        #p1.player
+        #p2.player
+
+    table#table
+      tbody
+        tr
+          td
+          td
+          td
+        tr
+          td
+          td
+          td
+        tr
+          td
+          td
+          td
+
+    script(src='/vendor/jquery/dist/jquery.min.js')
     script(src=isProd ? '/index.min.js' : '/index.js')
