--- a/client/index.less
+++ b/client/index.less
@@ -1,19 +1,28 @@
-body{
-  color: hsla(52, 100%, 20%, 1.0);
-  background-color: #FFDC00;
+table {
+  border: 1px solid red;
 }
 
-#apollo{
-  border: 5px solid hsla(52, 100%, 20%, 1.0);
-  width: 150px;
-  height: 225px;
+td {
+  width: 100px;
+  height: 100px;
+  border: 1px dashed blue;
 }
 
-#title{
-  position: relative;
-  top: -170px;
-  left: 200px;
-  font-family: monospace;
-  letter-spacing: 10px;
-  font-size: 40px;
+.player {
+  width: 25px;
+  height: 25px;
+  display: inline-block;
+
+}
+
+#chooser, #players {
+  display: none;
+}
+
+.active {
+  border: 3px solid black;
+}
+
+.x {
+
 }
